# nv-redfish

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  THIRD-PARTY-LICENSES.md
bmc-http/: Cargo.toml  build.rs
bmc-http/src/: cache.rs  credentials.rs  lib.rs  reqwest.rs
bmc-http/tests/: event_stream_tests.rs  reqwest_client_tests.rs
bmc-mock/: Cargo.toml
bmc-mock/src/: expect.rs  lib.rs
core/: Cargo.toml
core/src/: action.rs  bmc.rs  dynamic_properties.rs  edm_date_time_offset.rs  edm_duration.rs  http.rs  lib.rs  nav_property.rs  odata.rs  query.rs
core/tests/: etag_cache_tests.rs  reqwest_client_tests.rs
csdl-compiler/: Cargo.toml
csdl-compiler/examples/: csdl-parser.rs  schema-compilation.rs  schema-rust-gen.rs
csdl-compiler/src/: commands.rs  edmx.rs  error.rs  features_manifest.rs  lib.rs  main.rs
csdl-compiler/src/compiler/: action.rs  compiled.rs  compiled_properties.rs  complex_type.rs  context.rs  entity_type.rs  enum_type.rs  error.rs  mod.rs  namespace.rs  odata.rs  properties.rs  qualified_name.rs  redfish.rs  schema_index.rs  simple_type.rs
csdl-compiler/src/edmx/: action.rs  annotation.rs  attribute_values.rs  complex_type.rs  data_services.rs  edmx_root.rs  entity_type.rs  enum_type.rs  mod.rs  property.rs  reference.rs  schema.rs
csdl-compiler/src/generator/: casemungler.rs  converter.rs  mod.rs
csdl-compiler/src/odata/: annotations.rs
csdl-compiler/src/optimizer/: mod.rs  prune_complex_type_inheritance.rs  prune_entity_type_inheritance.rs  remove_empty_complex_types.rs  remove_empty_entity_types.rs
csdl-compiler/src/redfish/: annotations.rs  excerpt.rs  mod.rs
csdl-compiler/tests/: test-redfish-schema-parser.rs  test-schema-compilation.rs  test-schema-rust-gen.rs
dispatcher/: Cargo.toml
dispatcher/benches/: scheduler.rs
dispatcher/examples/: composable_tree.rs
dispatcher/src/: event.rs  lib.rs  runtime.rs  scheduler.rs  stats.rs  work.rs
dispatcher/src/schedulers/: mod.rs  round_robin.rs  token_bucket.rs
examples/explore-with-dummy-bmc/: Cargo.toml
examples/explore-with-dummy-bmc/src/: main.rs
examples/explore-with-reqwest-bmc/: Cargo.toml
examples/explore-with-reqwest-bmc/src/: main.rs
examples/redfish-oem-contoso/: Cargo.toml  build.rs
examples/redfish-scraper-cli/: Cargo.toml  README.md
examples/redfish-scraper-cli/src/: cli.rs  cmd_discover.rs  cmd_sensors.rs  cmd_snapshot.rs  connect.rs  main.rs  render.rs  runtime_loop.rs
examples/redfish-std/: Cargo.toml  build.rs
examples/redfish-std/src/: lib.rs
examples/sensor-stream-cli/: Cargo.toml
examples/sensor-stream-cli/src/: main.rs
examples/service-root-parser/: Cargo.toml
examples/service-root-parser/src/: main.rs
examples/session-token/: Cargo.toml
examples/session-token/src/: main.rs
redfish/: Cargo.toml  build.rs  features.toml
redfish/oem/lenovo/: README.md
redfish/schemas/redfish-csdl/: LICENSE
redfish/schemas/swordfish-csdl/: CapacitySourceCollection_v1.xml  Capacity_v1.xml  ConsistencyGroup_v1.xml  DataProtectionLineOfService_v1.xml  DataStorageLineOfService_v1.xml  FeaturesRegistry_v1.xml  FileShareCollection_v1.xml  FileShare_v1.xml  FileSystemMetrics_v1.xml  HostedStorageServices_v1.xml  IOPerformanceLineOfService_v1.xml  IOPerformanceLoSCapabilities_v1.xml  LICENSE  LineOfServiceCollection_v1.xml  NVMeDomain_v1.xml  StorageGroup_v1.xml  StoragePool_v1.xml  StorageReplicaInfo_v1.xml  StorageServiceMetrics_v1.xml
redfish/src/: assembly.rs  bmc.rs  bmc_quirks.rs  control.rs  entity_payload.rs  error.rs  ethernet_interface.rs  ethernet_interfaces.rs  lib.rs  patches.rs  pcie_device.rs  protocol_features.rs  resource.rs  schema_oem_hpe.rs  schema_oem_lenovo.rs  sensor.rs  sensors.rs  service_root.rs  vendor.rs
redfish/src/account/: collection.rs  item.rs  mod.rs
redfish/src/accounts/: account.rs  collection.rs  mod.rs  password_policy.rs
redfish/src/chassis/: chassis.rs  item.rs  mod.rs  network_adapter.rs  network_adapters.rs  power.rs  power_supply.rs  thermal.rs
redfish/src/computer_system/: bios.rs  drive.rs  item.rs  memory.rs  mod.rs  processor.rs  storage.rs
redfish/src/event_service/: mod.rs  patch.rs
redfish/src/log_service/: mod.rs
redfish/src/log_services/: mod.rs
redfish/src/manager/: item.rs  mod.rs
redfish/src/managers/: manager.rs  mod.rs
redfish/src/oem/: mod.rs  vendor.rs
redfish/src/patch_support/: collection.rs  payload.rs
redfish/src/session_service/: collection.rs  item.rs  mod.rs
redfish/src/system/: boot_option.rs  item.rs  storage.rs
redfish/src/systems/: computer_system.rs  drive.rs  memory.rs  mod.rs  processor.rs  storage.rs
redfish/src/telemetry_service/: metric_definition.rs  metric_report.rs  metric_report_definition.rs  mod.rs
redfish/src/update_service/: mod.rs  software_inventory.rs
scraper/: Cargo.toml
scraper/src/: control.rs  event.rs  generator.rs  ids.rs  lib.rs  output.rs  runtime.rs  scheduler.rs  stats.rs
scraper/src/adapter/: mod.rs  reconstruction.rs  redfish.rs
scraper/tests/: api_bounds.rs  completion.rs  control.rs  discovery_flow.rs  feature_gating.rs  output.rs  reconstruction.rs  redfish_adapter_api.rs  runtime_events.rs  scheduling.rs  state_machine.rs  stats.rs
scraper/tests/support/: controlled.rs  fake_error.rs  fake_event.rs  fake_generator.rs  fake_payload.rs  harness.rs  lcg.rs  mock_bmc.rs  mod.rs  redfish_events.rs
scraper/tests/trybuild/: adapter_with_one_cap_hides_others.rs  default_no_runtime_event.rs  (+13 more)
tests/: Cargo.toml  build.rs
tests/src/: base.rs  bmc.rs  error.rs  expect.rs  lib.rs
tests/tests/: test-assembly-wiwynn-missing-odata-type.rs  test-bios.rs  test-chassis-oem-nvidia-baseboard.rs  test-chassis.rs  test-computer-system-oem-lenovo.rs  test-computer-system-oem-nvidia-bluefield.rs  test-computer-system.rs  test-manager-oem-ami.rs  test-manager-oem-dell-attributes.rs  test-manager-oem-hpe.rs  test-manager-oem-lenovo.rs  test-manager-oem-supermicro.rs  test-manager.rs  test-service-root-oem-hpe.rs  test-session-service.rs  test-update-service.rs  tests-account-service.rs  tests-base-operations.rs
(+132 files in other folders)
