[workspace]
members = [
   "lib",
   "csdl-compiler",
   "examples/redfish-std",
   "examples/redfish-oem-contoso",
   "examples/service-root-parser",
   "examples/explore-with-dummy-bmc",
   "examples/explore-with-reqwest-bmc",
]

[workspace.package]
version = "0.1.0"
license-file = "LICENSE"
repository = "https://github.com/NVIDIA/nv-redfish"
readme = "README.md"
edition = "2018"
keywords = ["rust", "redfish", "bmc"]
categories = ["hardware-support"]
documentation = "TBD"

[workspace.dependencies]
clap = { version = "4.5" }
clap_derive = { version = "4.5" }
http = {version = "1.3"}
glob = { version = "0.3" }
prettyplease = { version = "0.2" }
proc-macro2 = { version = "1.0" }
quick-xml = { version = "0.38" }
quote = { version = "1.0" }
serde = { version = "1.0" }
serde_json = { version = "1.0" }
syn = { version = "2.0" }
tagged-types = { version = "^0.2.3" }
reqwest = { version = "0.12" }
url = { version = "2.5" }

# Dev
tokio = "1"
tokio-test = "0.4"
# had to use 0.6.4 since it works with 2018 edition (2024 needs extra work) 
wiremock = "0.6.4"
