[workspace]
members = [
   "core",
   "redfish",
   "bmc-http",
   "bmc-mock",
   "csdl-compiler",
   "examples/redfish-std",
   "examples/redfish-oem-contoso",
   "examples/service-root-parser",
   "examples/explore-with-dummy-bmc",
   "examples/explore-with-reqwest-bmc",
   "tests"
]

[workspace.package]
version = "0.1.0"
license-file = "LICENSE"
license = "Apache-2.0"
repository = "https://github.com/NVIDIA/nv-redfish"
description = "Rust implementation of Redfish API for BMC management"
readme = "README.md"
edition = "2018"
keywords = ["rust", "redfish", "bmc"]
categories = ["hardware-support"]

[workspace.dependencies]
clap = { version = "4.5" }
clap_derive = { version = "4.5" }
http = {version = "1.3"}
glob = { version = "0.3" }
prettyplease = { version = "0.2" }
proc-macro2 = { version = "1.0" }
quick-xml = { version = "0.38" }
quote = { version = "1.0" }
serde = { version = "1.0", default-features = false }
serde_json = { version = "1.0", default-features = false }
serde_path_to_error = "0.1"
syn = { version = "2.0" }
tagged-types = { version = "^0.2.3" }
reqwest = { version = "0.12", default-features = false }
url = { version = "2.5" }
uuid = { version = "1.18", default-features = false }
time = { version = "0.3", default-features = false }
rust_decimal = { version = "1.38", default-features = false }
nv-redfish-core = { version = "0.1", path = "./core" }
nv-redfish-bmc-http = { version = "0.1", path = "./bmc-http" }
nv-redfish-bmc-mock = { version = "0.1", path = "./bmc-mock" }
nv-redfish = { version = "0.1", path = "./redfish" }
nv-redfish-csdl-compiler = { version = "0.1", path = "./csdl-compiler" }
toml = { version = "0.9", default-features = false }

# Dev
tokio = "1"
tokio-test = "0.4"
# had to use 0.6.4 since it works with 2018 edition (2024 needs extra work) 
wiremock = "0.6.4"
trybuild = "1.0"
