[package]
name = "nv-redfish-bmc-mock"
description = "BMC Mock skaffold for nv-redfish"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/nv-redfish-bmc-mock"

[dependencies]
nv-redfish-core = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, features = [ "derive" ] }
serde_json = { workspace = true }
