[package]
name = "csdl-compiler"
version.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = [ "derive" ]}
heck = { workspace = true }
quick-xml = { workspace = true, features = ["serialize"] }
tagged-types = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }
clap = { workspace = true, features = [ "derive" ] }
clap_derive = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
