[package]
name = "nv-redfish-csdl-compiler"
description = "CSDL (OData) schema compiler and Rust code generator for nv-redfish"
version.workspace = true
license-file.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/nv-redfish-csdl-compiler"

[lib]
path = "src/lib.rs"

[dependencies]
serde = { workspace = true, features = [ "derive" ]}
quick-xml = { workspace = true, features = ["serialize"] }
tagged-types = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
prettyplease = { workspace = true }
syn = { workspace = true }
clap = { workspace = true, features = [ "derive" ] }
clap_derive = { workspace = true }
toml = { workspace = true, features = [ "parse", "serde" ] }

[dev-dependencies]
serde_json = { workspace = true, features = [ "std" ] }
