# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "nv-redfish-dispatcher"
description = "Generic cooperative task dispatcher"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/nv-redfish-dispatcher"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

runtime-events = []

serde = ["dep:serde", "serde/rc"]

[dependencies]
futures-core = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
