[package]
name = "nv-redfish"
version.workspace = true
license-file.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/nv-redfish"

include = [
    "src/**/*",
    "build.rs",
    "features.toml",
    "schemas/**/*.xml",
    "oem/**/*.xml",
    "oem/**/README.md",
]

[features]
default = []

std-redfish = [
    "accounts",
    "assembly",
    "boot-options",
    "bios",
    "chassis",
    "computer-systems",
    "ethernet-interfaces",
    "log-services",
    "managers",
    "memory",
    "network-adapters",
    "power",
    "power-supplies",
    "pcie-devices",
    "processors",
    "secure-boot",
    "sensors",
    "storages",
    "thermal",
    "update-service",
]

accounts = []
assembly = []
bios = []
boot-options = []
chassis = []
computer-systems = []
ethernet-interfaces = []
network-adapters = []
log-services = []
managers = []
memory = []
pcie-devices = ["resource-status"]
power = [] # Support of legacy PowerSubsystem
power-supplies = []
processors = []
resource-status = []
secure-boot = []
sensors = []
storages = []
thermal = []  # Support of legacy ThermalSubsystem
update-service = []

# OEM features support
oem-lenovo = ["oem"]
oem-hpe = ["oem"]
oem-supermicro = ["oem"]
oem-dell = ["oem"]
oem-ami = ["oem"]
oem-nvidia = ["oem"]
oem = []

# OEM product features support
oem-nvidia-bluefield = ["oem-nvidia"]


[dependencies]
nv-redfish-core = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tagged-types = { workspace = true }

[build-dependencies]
nv-redfish-csdl-compiler = { workspace = true }