[package]
name = "nv-redfish"
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/nv-redfish"

include = [
    "src/**/*",
    "build.rs",
    "features.toml",
    "schemas/**/*.xml",
    "oem/**/*.xml",
    "oem/**/README.md",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = []

bmc-http = [ "dep:nv-redfish-bmc-http" ]

std-redfish = [
    "accounts",
    "assembly",
    "boot-options",
    "bios",
    "chassis",
    "computer-systems",
    "ethernet-interfaces",
    "log-services",
    "managers",
    "memory",
    "network-adapters",
    "power",
    "power-supplies",
    "pcie-devices",
    "processors",
    "secure-boot",
    "sensors",
    "storages",
    "telemetry-service",
    "thermal",
    "update-service",
]

assembly = []
accounts = ["patch-payload-get", "patch-payload-update", "patch-collection-create"]
bios = []
boot-options = []
chassis = ["patch-payload-get", "nv-bmc-expand"]
computer-systems = ["patch-payload-get", "patch-collection"]
ethernet-interfaces = []
network-adapters = []
telemetry-service = []
log-services = []
managers = []
memory = []
pcie-devices = ["resource-status"]
power = [] # Support of legacy PowerSubsystem
power-supplies = []
processors = []
resource-status = []
secure-boot = []
sensors = []
storages = []
thermal = []  # Support of legacy ThermalSubsystem
update-service = ["patch-payload-get", "patch-collection"]

# OEM features support
oem = []
oem-lenovo = ["oem"]
oem-hpe = ["oem"]
oem-supermicro = ["oem"]
oem-dell = ["oem"]
oem-ami = ["oem"]
oem-nvidia = ["oem"]

# OEM product features support
oem-nvidia-bluefield = ["oem-nvidia"]
oem-nvidia-baseboard = ["oem-nvidia"]

# Patches
patch = []
patch-payload = ["patch"]
patch-payload-get = ["patch-payload"]
patch-payload-update = ["patch-payload"]
patch-collection = ["nv-bmc-expand"]
patch-collection-create = ["patch-collection"]

# NvbBmc features
nv-bmc-expand = []

[dependencies]
nv-redfish-core = { workspace = true }
nv-redfish-bmc-http = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tagged-types = { workspace = true }

[build-dependencies]
nv-redfish-csdl-compiler = { workspace = true }