[package]
name = "nv-redfish"
version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/nv-redfish"

include = [
    "src/**/*",
    "build.rs",
    "features.toml",
]

[package.metadata.docs.rs]
all-features = true

[features]
default = []

bmc-http = [ "dep:nv-redfish-bmc-http" ]

std-redfish = [
    "accounts",
    "assembly",
    "boot-options",
    "bios",
    "chassis",
    "computer-systems",
    "controls",
    "ethernet-interfaces",
    "event-service",
    "host-interfaces",
    "log-services",
    "managers",
    "memory",
    "network-adapters",
    "network-device-functions",
    "power",
    "power-supplies",
    "pcie-devices",
    "processors",
    "secure-boot",
    "sensors",
    "session-service",
    "storages",
    "task-service",
    "telemetry-service",
    "thermal",
    "update-service",
]

assembly = []
accounts = ["patch-payload-get", "patch-payload-update", "patch-collection-create"]
bios = []
boot-options = []
chassis = ["patch-payload-get", "patch-collection", "impl-nv-bmc-expand", "impl-entity-link"]
computer-systems = ["patch-payload-get", "patch-collection"]
controls = ["environment-metrics"]
ethernet-interfaces = []
environment-metrics = []
host-interfaces = []
network-adapters = []
network-device-functions = []
event-service = ["patch"]
telemetry-service = ["impl-nv-bmc-expand"]
log-services = []
managers = ["impl-nv-bmc-expand", "patch-collection"]
memory = []
pcie-devices = ["resource-status"]
power = [] # Support of legacy PowerSubsystem
power-supplies = []
processors = ["pcie-devices"]
resource-status = []
secure-boot = []
sensors = ["impl-entity-link", "environment-metrics"]
session-service = ["impl-nv-bmc-expand"]
storages = []
task-service = ["impl-entity-link"]
thermal = []  # Support of legacy ThermalSubsystem
update-service = ["patch-payload-get", "patch-collection"]

# OEM features support
oem = []
oem-lenovo = ["oem"]
oem-hpe = ["oem"]
oem-supermicro = ["oem"]
oem-dell = ["oem"]
oem-ami = ["oem"]
oem-nvidia = ["oem"]
oem-liteon = ["oem"]

# OEM product features support
oem-nvidia-bluefield = ["oem-nvidia"]
oem-nvidia-baseboard = ["oem-nvidia"]

oem-dell-attributes = ["oem-dell"]

# Patches
patch = []
patch-payload = ["patch"]
patch-payload-get = ["patch-payload"]
patch-payload-update = ["patch-payload"]
patch-collection = ["impl-nv-bmc-expand", "patch-payload"]
patch-collection-create = ["patch-collection"]

# Internal features:
impl-nv-bmc-expand = []
impl-entity-link = []

[dependencies]
nv-redfish-core = { workspace = true }
nv-redfish-bmc-http = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
tagged-types = { workspace = true }

[build-dependencies]
nv-redfish-csdl-compiler = { workspace = true }
nv-redfish-schema = { workspace = true }
