# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "nv-redfish-scraper"
description = "Generic scraper runtime and Redfish adapter for nv-redfish"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation = "https://docs.rs/nv-redfish-scraper"

[package.metadata.docs.rs]
all-features = true

[features]
default = []

# Enable concrete RuntimeEvent type and emission paths. When disabled,
# RuntimeEventType is core::convert::Infallible and RuntimeOutput::Runtime(_)
# cannot be constructed.
runtime-events = []

# Enable serde support on adapter resource events and reconstruction records.
serde = ["dep:serde", "serde/rc"]

# Enable the Redfish adapter module. Pulls nv-redfish.
redfish-adapter = ["dep:nv-redfish"]

# Per-capability adapter feature gates. Phase 0 wires a representative subset;
# additional capabilities follow the same pattern.
#
# `adapter-chassis` pulls in the `nv-redfish` schema features for the
# inlinable Chassis sub-resources (Thermal, Power, Sensors) so that the
# Phase 7 expand-aware `ChassisGenerator` can pattern-match on
# `NavProperty::Expanded(_)` for those fields. Without those schema
# features the generated `ChassisSchema` exposes them as `ReferenceLeaf`
# instead of `NavProperty<T>`, which would break the auto-detect path.
adapter-service-root = ["redfish-adapter"]
adapter-chassis = [
    "redfish-adapter",
    "nv-redfish/chassis",
    "nv-redfish/thermal",
    "nv-redfish/power",
    "nv-redfish/sensors",
]
adapter-sensors = ["adapter-chassis", "nv-redfish/sensors"]
adapter-computer-systems = ["redfish-adapter", "nv-redfish/computer-systems"]

[dependencies]
futures-core = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true, optional = true, features = ["derive"] }
nv-redfish = { workspace = true, optional = true }

[dev-dependencies]
trybuild = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
nv-redfish-bmc-mock = { workspace = true }

