[package]
name = "nv-redfish-tests"
version.workspace = true
license-file.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nv-redfish-core = { workspace = true }
nv-redfish-bmc-mock = { workspace = true }
nv-redfish = { workspace = true, features = [
    "accounts",
    "bios",
    "computer-systems",
    "update-service",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild = { workspace = true }

[build-dependencies]
nv-redfish-csdl-compiler = { workspace = true }
