[package]
name = "nv-redfish-tests"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
nv-redfish-core = { workspace = true }
nv-redfish-bmc-mock = { workspace = true }
nv-redfish = { workspace = true, features = [
    "accounts",
    "assembly",
    "bios",
    "chassis",
    "controls",
    "computer-systems",
    "managers",
    "oem-dell-attributes",
    "oem-ami",
    "oem-hpe",
    "oem-lenovo",
    "oem-nvidia-bluefield",
    "oem-nvidia-baseboard",
    "oem-supermicro",
    "oem-liteon",
    "power-supplies",
    "sensors",
    "session-service",
    "task-service",
    "update-service",
] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }

[dev-dependencies]
futures-util = { workspace = true, features = ["io"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
trybuild = { workspace = true }

[build-dependencies]
nv-redfish-csdl-compiler = { workspace = true }
nv-redfish-schema = { workspace = true }
