[package]
name = "explore-with-dummy-bmc"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
futures-core = { workspace = true }
futures-util = { workspace = true }
redfish-std = { path = "../redfish-std" }
redfish-oem-contoso = { path = "../redfish-oem-contoso" }
nv-redfish-core = { workspace = true }
