[package]
name = "explore-with-reqwest-bmc"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
redfish-std = { path = "../redfish-std" }
nv-redfish = { path = "../../lib" }
url = { workspace = true }
