[package]
name = "explore-with-reqwest-bmc"
version.workspace = true
license-file.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
tokio = { workspace = true, features = ["full"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
redfish-std = { path = "../redfish-std" }
url = { workspace = true }
nv-redfish-core = { workspace = true }
nv-redfish-bmc-http = { workspace = true }
