[package]
name = "redfish-oem-contoso"
version.workspace = true
license-file.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true
documentation.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
nv-redfish-core = { workspace = true }

[build-dependencies]
glob = { workspace = true }
csdl-compiler = { workspace = true }
