# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "redfish-scraper-cli"
version.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "nv-redfish-scraper-cli"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "signal", "time"] }
futures-util = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["std"] }
url = { workspace = true }
nv-redfish = { workspace = true, features = [
    "bmc-http",
    "chassis",
    "computer-systems",
    "sensors",
    "thermal",
    "power",
] }
nv-redfish-bmc-http = { workspace = true }
nv-redfish-scraper = { workspace = true, features = [
    "redfish-adapter",
    "adapter-service-root",
    "adapter-chassis",
    "adapter-sensors",
    "adapter-computer-systems",
    "runtime-events",
    "serde",
] }
