[package]
name = "redfish-std"
version.workspace = true
license-file.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
edition.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde = { workspace = true, features = ["derive"] }
nv-redfish-core = { workspace = true }

[build-dependencies]
glob = { workspace = true }
nv-redfish-csdl-compiler = { workspace = true }
